--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -18,5 +18,5 @@ home_section_odd = "rgb(255, 255, 255)"
 home_section_even = "rgb(247, 247, 247)"
 
 [dark]
-  link = "#bbdefb"
+  link = "#FFBF00"
   link_hover = "#bbdefb"
