--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -10,7 +10,7 @@ primary = "#C69A53"
 # Menu
 menu_primary = "#FFFFFF"
 menu_text = "#34495e"
-menu_text_active = "#2962ff"
+menu_text_active = "#C69A53"
 menu_title = "#2b2b2b"
 
 # Home sections
