--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -8,9 +8,9 @@ light = true
 primary = "#C69A53"
 
 # Menu
-menu_primary = "#FFFFFF"
-menu_text = "#34495e"
-menu_text_active = "#C69A53"
+menu_primary = "#C69A53"
+menu_text = "#FFFFFF"
+menu_text_active = "#2b2b2b"
 menu_title = "#2b2b2b"
 
 # Home sections
