--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,23 +9,33 @@
   weight = 10
 
 [[main]]
+  name = "Skills"
+  url = "#skills"
+  weight = 20
+
+[[main]]
+  name = "Experience"
+  url = "#experience"
+  weight = 30
+
+[[main]]
   name = "Posts"
   url = "#posts"
-  weight = 20
+  weight = 40
   
 [[main]]
   name = "Projects"
   url = "#projects"
-  weight = 30
+  weight = 50
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 40
+  weight = 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/media/resume.pdf` and uncomment the lines below.
 [[main]]
   name = "CV"
   url = "media/resume.pdf"
-  weight = 50
+  weight = 70
