--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -8,7 +8,7 @@ light = true
 primary = "#C69A53"
 
 # Menu
-menu_primary = "#C69A53"
+menu_primary = "#03071E"
 menu_text = "#FFFFFF"
 menu_text_active = "#2b2b2b"
 menu_title = "#2b2b2b"
