--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -10,8 +10,8 @@ primary = "#C69A53"
 # Menu
 menu_primary = "#03071E"
 menu_text = "#FFFFFF"
-menu_text_active = "#2b2b2b"
-menu_title = "#2b2b2b"
+menu_text_active = "#C69A53"
+menu_title = "#C69A53"
 
 # Home sections
 home_section_odd = "rgb(255, 255, 255)"
